# maudfmt

./: .yamlfmt  Cargo.toml  README.md  flake.nix  justfile
.github/workflows/: auto-update.yaml  on-pull-request.yml  on-tag.yml
src/: collect.rs  format.rs  lib.rs  line_length.rs  main.rs  print.rs  testing.rs  unparse.rs
src/print/: block.rs  comment_and_whitespace.rs  control_flow.rs  element.rs  expr.rs  lit.rs  markup.rs  mod.rs  splice.rs
tests/: cli.rs  rustfmt_arg.rs
