[package]
name = "maudfmt"
description = "An opinionated yet customizable Maud formatter."
version = "0.1.6"
edition = "2024"
license = "MIT"
homepage = "https://github.com/jeosas/maudfmt"
repository = "https://github.com/jeosas/maudfmt"
readme = "README.md"

[dependencies]
# keep-sorted start
anyhow = "1"
clap = { version = "4", features = ["derive"] }
glob = "0.3"
crop = "0.4"
proc-macro2 = { version = "1", features = ["span-locations"] }
prettyplease = { version = "0.2", features = ["verbatim"] }
proc-macro2-diagnostics = { version = "0.10", default-features = false }
quote = "1"
syn = { version = "2", features = ["visit", "full", "extra-traits"] }
# keep-sorted end

[dev-dependencies]
# keep-sorted start
pretty_assertions = "1"
predicates = "3"
assert_fs = "1"
assert_cmd = "2"
# keep-sorted end
